--- a/assets/reset-password.html
+++ b/assets/reset-password.html
@@ -55,8 +55,8 @@
               <td style="text-align: center;">
                 <a href="https://rakeshmandal.com" title="logo" target="_blank">
                   <img
-                    width="60"
-                    src="https://i.ibb.co/hL4XZp2/android-chrome-192x192.png"
+                    width="160"
+                    src="https://cdn3.iconfinder.com/data/icons/communication-media-malibu-vol-2/128/online-news-512.png"
                     title="logo"
                     alt="logo"
                   />
@@ -98,7 +98,8 @@
                           font-family: 'Rubik', sans-serif;
                         "
                       >
-                        You have requested to reset your password
+                        You have requested to reset your password for
+                        <strong><i>News2Inbox</i></strong>
                       </h1>
                       <span
                         style="
@@ -122,13 +123,25 @@
                         To reset your password, click the following link and
                         follow the instructions.
                       </p>
-                      <a
-                        href="javascript:void(0);"
+                      <p
                         style="
-                          background: #20e277;
+                          color: #455056;
+                          font-size: 15px;
+                          line-height: 24px;
+                          margin-top: 10;
+                          font-weight: 600;
+                        "
+                      >
+                        Link will expire in an hour, can only be used for one
+                        time.
+                      </p>
+                      <a
+                        href="{{resetLink}}"
+                        style="
+                          background: rgb(80, 142, 242);
                           text-decoration: none !important;
                           font-weight: 500;
-                          margin-top: 35px;
+                          margin-top: 15px;
                           color: #fff;
                           text-transform: uppercase;
                           font-size: 14px;
@@ -160,7 +173,7 @@
                     margin: 0 0 0;
                   "
                 >
-                  &copy; <strong>www.rakeshmandal.com</strong>
+                  <strong>2020</strong> &copy; <strong>News2Inbox</strong>
                 </p>
               </td>
             </tr>
